--- a/indexPromptEx1-2.html
+++ b/indexPromptEx1-2.html
@@ -4,7 +4,7 @@
     <meta cahrset = "UTF-8">
     <meta name = "viewport" content = "width=devide-width, initial-scale=1.0">
     <title>PromptEx</title>
-    <script src = "indexPrompt.js"></script>
+    <script src = "indexPromptEx1-2.js"></script>
 </head>
 <body>
 </body>
