--- a/mercadoDEV_Ex9.html
+++ b/mercadoDEV_Ex9.html
@@ -3,7 +3,7 @@
 <head>
     <meta cahrset = "UTF-8">
     <meta name = "viewport" content = "width=devide-width, initial-scale=1.0">
-    <title>PromptEx</title>
+    <title>Mercado DEV</title>
     <script src = "mercadoDEV_Ex9.js"></script>
 </head>
 <body>
